Html updated to semantically correct, I think that the CSS needs to be reworked but I don't know how to do that yet

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <header>
-        <p>BigFootShadow4509's Blog</p>
-        <nav>
+        <section>BigFootShadow4509's Blog</section>
+        <section><nav>
             <a href="#" class="home-link">Home</a>
-        </nav>
+        </nav></section>
     
     </header>
 
@@ -63,8 +63,8 @@
 
     </main>
 
-    <div class="footer">
-        <div>&copy; 2025 BigFootShadow4509</div>
-    </div>
+    <footer>
+        <section>&copy; 2025 BigFootShadow4509</section>
+    </footer>
 </body>
 </html>
