I've learned a little on getting my elements to reflect the CSS, work in progress

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>BigFootShadow4509's Blog</title>
 </head>
 <body>
-    <header>
+    <header class="header">
         <section>BigFootShadow4509's Blog</section>
         <section><nav>
             <a href="#" class="home-link">Home</a>
@@ -15,12 +15,12 @@
     
     </header>
 
-    <main>
+    <main class="main">
         <article>
-            <figure>
+            <figure class="image-container">
                 <img src="./img/big-foot.jpg" alt="The famous Patterson-Gimlin bigfoot photo." srcset="">
             </figure>
-            <h1>My Bigfoot Sighting</h1>
+            <h1 class="title">My Bigfoot Sighting</h1>
         
             <p>
                 Hey there, fellow adventurers!
@@ -63,7 +63,7 @@
 
     </main>
 
-    <footer>
+    <footer class="footer">
         <section>&copy; 2025 BigFootShadow4509</section>
     </footer>
 </body>
